Fixed countdown to work on small screens

--- a/_sass/footer.sass
+++ b/_sass/footer.sass
@@ -112,12 +112,27 @@ footer
 		a
 			color: $gray85
 
-@media (max-width: 750px)
-	.countdown
-		display: none
-		visibility: hidden
-	.footer-flex-content
-		display: block !important
-		.links-group
-			margin-left: 0px !important
-			margin-top: 25px
+@media (max-width: 950px)
+	.values
+		display: flex
+		flex-wrap: wrap
+		justify-content: center
+		gap: 20px
+		margin-top: 40px
+
+	.time-value-section
+		width: 45%
+		text-align: center
+
+	.time-value-text
+		font-size: clamp(0.75rem, 2vw, 1rem)
+		margin-bottom: 4px
+		text-transform: uppercase
+		letter-spacing: 1px
+
+	.time-value-number
+		font-size: clamp(2rem, 6.5vw, 3.5rem)
+		line-height: 1.1
+
+	main
+		padding: 40px 20px
